added tcp support to libstream

--- a/lib/libstream/Makefile
+++ b/lib/libstream/Makefile
@@ -1,6 +1,6 @@
 PROJ = libstream
 
-SRC = stream.c stream_raw.c stream_ascii.c
+SRC = stream.c stream_raw.c stream_ascii.c stream_tcp.c
 OBJ = $(SRC:.c=.o)
 
 CFLAGS = -W -Wall -I. -lm -ggdb -DLOGGER_ENABLED -fPIC -fpack-struct
