--- a/lib/libsdm/Makefile
+++ b/lib/libsdm/Makefile
@@ -1,6 +1,6 @@
 PROJ = libsdm
 
-SRC = sdm.c utils.c
+SRC = sdm.c utils.c janus/janus.c
 OBJ = $(SRC:.c=.o)
 
 CFLAGS = -W -Wall -I. -I../libstream -lm -ggdb -DLOGGER_ENABLED -fPIC -fpack-struct
