Add creating python packages
Move bindings/ to top directory

--- a/bindings/python/Makefile
+++ b/bindings/python/Makefile
@@ -1,18 +1,19 @@
 PROJ = sdm
 
-LIBSDM_DIR     = ../..
-LIBSTREAM_DIR  = ../../../libstream
+LIBSDM_DIR     = ../../lib/libsdm
+LIBSTREAM_DIR  = ../../lib/libstream
 LIBS  = -L$(LIBSDM_DIR) -I$(LIBSDM_DIR) -L$(LIBSTREAM_DIR) -I$(LIBSTREAM_DIR)
 TESTS_BASE = tests
 TEST = usbl
 
+SWIG_SRC  = $(PROJ).i
 WRAP_SRC  = $(PROJ)_wrap.c
 
 OUT_SO = _$(PROJ).so
 SWIG_OPT  = -python -globals var
 BIND_LANG_INC = /usr/include/python3.11
 
-OUT_SO = $(PROJ).so
+#OUT_SO = $(PROJ).so
 #BIND_LANG_INC = /usr/include/tcl8.6/
 #SWIG_OPT  = -tcl8
 #SWIG_OPT += -namespace
@@ -26,10 +27,10 @@ TEST_NODE_passive = 221
 .PHONY: build
 build: lib $(LIBSDM_DIR)/libsdm.so $(LIBSTREAM_DIR)/libstream.so $(OUT_SO)
 
-$(WRAP_SRC): $(PROJ).i
-	#swig -python -E -I$(LIBSDM_DIR) $(PROJ).i
-	#swig -python -debug-tmsearch -I$(LIBSDM_DIR) $(PROJ).i
-	swig -v -Wall $(SWIG_OPT) -I$(LIBSDM_DIR) -I$(LIBSTREAM_DIR) $(PROJ).i
+$(WRAP_SRC): $(SWIG_SRC)
+	#swig -python -E -I$(LIBSDM_DIR) $(SWIG_SRC)
+	#swig -python -debug-tmsearch -I$(LIBSDM_DIR) $(SWIG_SRC)
+	swig -v -Wall $(SWIG_OPT) -I$(LIBSDM_DIR) -I$(LIBSTREAM_DIR) $(SWIG_SRC)
 
 $(OUT_SO): $(WRAP_SRC)
 	$(CC) $(LIBS) -I$(BIND_LANG_INC) -shared -fPIC -l$(PROJ) -o $@ $(WRAP_SRC) \
