Revert back SDM data type to int16_t
For some reason in commit 40b488103ff0a2963786f49bc721050861979d0c
SDM data type was changed from int16_t to uint16_t.
Have no idea why, but it should be int16_t

Fix some warnings

--- a/bindings/python/Makefile
+++ b/bindings/python/Makefile
@@ -27,7 +27,9 @@ TEST_NODE_passive = 221
 pkg:
 	python3 -m build
 .PHONY: pkg
+
 build: lib $(LIBSDM_DIR)/libsdm.so $(LIBSTREAM_DIR)/libstream.so $(OUT_SO)
+.PHONY: build
 
 $(WRAP_SRC): $(SWIG_SRC)
 	#swig -python -E -I$(LIBSDM_DIR) $(SWIG_SRC)
